@@ -5,3 +5,5 @@ I had to change it recently for changes with imdb, so I just put it into a git w
 known issues:
  * the window will sometimes jump around, can't be bothered to fix that
  * the imdb scraping is rather volatile, due to changes happening regularly at imdb
+ * with a clean database it'll crash and create an invalid archive. `--add-opens java.base/java.util=ALL-UNNAMED` does fix that
+ * path recognition is for linux, has problem on windows and puts the archive wherever
